Updated the MSVC project files of the scummvm project with the latest changes to the files
svn-id: r36190

--- a/dists/msvc7/scummvm.vcproj
+++ b/dists/msvc7/scummvm.vcproj
@@ -157,12 +157,6 @@
 		<Filter
 			Name="common">
 			<File
-				RelativePath="..\..\common\advancedDetector.cpp">
-			</File>
-			<File
-				RelativePath="..\..\common\advancedDetector.h">
-			</File>
-			<File
 				RelativePath="..\..\common\algorithm.h">
 			</File>
 			<File
@@ -185,6 +179,12 @@
 			</File>
 			<File
 				RelativePath="..\..\common\config-manager.h">
+			</File>
+			<File
+				RelativePath="..\..\common\debug.cpp">
+			</File>
+			<File
+				RelativePath="..\..\common\debug.h">
 			</File>
 			<File
 				RelativePath="..\..\common\endian.h">
@@ -660,6 +660,12 @@
 		</Filter>
 		<Filter
 			Name="backends">
+			<File
+				RelativePath="..\..\backends\base-backend.cpp">
+			</File>
+			<File
+				RelativePath="..\..\backends\base-backend.h">
+			</File>
 			<Filter
 				Name="sdl">
 				<File
@@ -1136,6 +1142,12 @@
 		</Filter>
 		<Filter
 			Name="engines">
+			<File
+				RelativePath="..\..\engines\advancedDetector.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\advancedDetector.h">
+			</File>
 			<File
 				RelativePath="..\..\engines\dialogs.cpp">
 			</File>
