--- a/dists/msvc71/scummvm.vcproj
+++ b/dists/msvc71/scummvm.vcproj
@@ -171,12 +171,6 @@
 		<Filter
 			Name="common">
 			<File
-				RelativePath="..\..\common\advancedDetector.cpp">
-			</File>
-			<File
-				RelativePath="..\..\common\advancedDetector.h">
-			</File>
-			<File
 				RelativePath="..\..\common\algorithm.h">
 			</File>
 			<File
@@ -199,6 +193,12 @@
 			</File>
 			<File
 				RelativePath="..\..\common\config-manager.h">
+			</File>
+			<File
+				RelativePath="..\..\common\debug.cpp">
+			</File>
+			<File
+				RelativePath="..\..\common\debug.h">
 			</File>
 			<File
 				RelativePath="..\..\common\endian.h">
@@ -674,6 +674,12 @@
 		</Filter>
 		<Filter
 			Name="backends">
+			<File
+				RelativePath="..\..\backends\base-backend.cpp">
+			</File>
+			<File
+				RelativePath="..\..\backends\base-backend.h">
+			</File>
 			<Filter
 				Name="sdl">
 				<File
@@ -1150,6 +1156,12 @@
 		</Filter>
 		<Filter
 			Name="engines">
+			<File
+				RelativePath="..\..\engines\advancedDetector.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\advancedDetector.h">
+			</File>
 			<File
 				RelativePath="..\..\engines\dialogs.cpp">
 			</File>
