--- a/dists/msvc9/scummvm.vcproj
+++ b/dists/msvc9/scummvm.vcproj
@@ -248,14 +248,6 @@
 			Name="common"
 			>
 			<File
-				RelativePath="..\..\common\advancedDetector.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\common\advancedDetector.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\common\algorithm.h"
 				>
 			</File>
@@ -285,6 +277,14 @@
 			</File>
 			<File
 				RelativePath="..\..\common\config-manager.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\debug.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\debug.h"
 				>
 			</File>
 			<File
@@ -916,6 +916,14 @@
 		<Filter
 			Name="backends"
 			>
+			<File
+				RelativePath="..\..\backends\base-backend.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\backends\base-backend.h"
+				>
+			</File>
 			<Filter
 				Name="sdl"
 				>
@@ -1549,6 +1557,14 @@
 		<Filter
 			Name="engines"
 			>
+			<File
+				RelativePath="..\..\engines\advancedDetector.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\advancedDetector.h"
+				>
+			</File>
 			<File
 				RelativePath="..\..\engines\dialogs.cpp"
 				>
