--- a/backends/platform/symbian/UIQ3/BLD.INF.in
+++ b/backends/platform/symbian/UIQ3/BLD.INF.in
@@ -7,5 +7,5 @@ PRJ_MMPFILES
 	// empty base file, will be updated by Perl build scripts
 	
 //STOP_AUTO_PROJECTS//
-
+.\ScummVM_A0000658_UIQ3.mmp
 .\ScummVM_UIQ3.mmp
