Added debugger console
svn-id: r36259

--- a/dists/msvc9/cruise.vcproj
+++ b/dists/msvc9/cruise.vcproj
@@ -232,6 +232,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\cruise\debugger.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\cruise\debugger.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\cruise\delphine-unpack.cpp"
 			>
 		</File>
