--- a/dists/msvc71/cruise.vcproj
+++ b/dists/msvc71/cruise.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="7.10"
+	Version="7,10"
 	Name="cruise"
 	ProjectGUID="{8863B00B-059A-471E-876D-A955ECEFD0D2}"
 	Keyword="Win32Proj">
@@ -166,6 +166,12 @@
 			RelativePath="..\..\engines\cruise\dataLoader.h">
 		</File>
 		<File
+			RelativePath="..\..\engines\cruise\debugger.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\cruise\debugger.h">
+		</File>
+		<File
 			RelativePath="..\..\engines\cruise\delphine-unpack.cpp">
 		</File>
 		<File
@@ -260,6 +266,12 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\cruise\stack.h">
+		</File>
+		<File
+			RelativePath="..\..\engines\cruise\staticres.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\cruise\staticres.h">
 		</File>
 		<File
 			RelativePath="..\..\engines\cruise\various.cpp">
