fixed msvc9 compilation
svn-id: r38208

--- a/dists/msvc9/sci.vcproj
+++ b/dists/msvc9/sci.vcproj
@@ -646,6 +646,242 @@
 				</File>
 			</Filter>
 		</Filter>
+		<Filter
+			Name="include"
+			>
+			<File
+				RelativePath="..\..\engines\sci\include\aatree.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\conf_driver.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\conf_extension.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\conf_parse.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\conf_subsystems.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\conf_summary.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\console.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\engine.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\event.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\game_select.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\gfx_driver.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\gfx_operations.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\gfx_options.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\gfx_res_options.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\gfx_resmgr.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\gfx_resource.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\gfx_state_internal.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\gfx_system.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\gfx_tools.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\gfx_widgets.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\hashmap.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\heapmgr.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\int_hashmap.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\kdebug.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\kernel.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\list.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\listener.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\menubar.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\modules.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\old_objects.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\reg_t_hashmap.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\resource.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\sbtree.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\sci_conf.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\sci_dos.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\sci_memory.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\sci_midi.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\sci_widgets.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\sciresource.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\scitypes.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\script.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\seg_manager.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\sfx_core.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\sfx_engine.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\sfx_iterator.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\sfx_iterator_internal.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\sfx_pcm.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\sfx_player.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\sfx_songlib.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\sfx_time.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\sfx_timer.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\sys_strings.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\uinput.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\util.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\versions.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\vm.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\vm_types.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\include\vocabulary.h"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
