Updated the MSVC project files of the SCI engine with the latest changes to the file structure
svn-id: r38366

--- a/dists/msvc7/sci.vcproj
+++ b/dists/msvc7/sci.vcproj
@@ -117,6 +117,18 @@
 				RelativePath="..\..\engines\sci\engine\grammar.cpp">
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\engine\heap.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\engine\heap.h">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\engine\int_hashmap.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\engine\int_hashmap.h">
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\engine\kernel.cpp">
 			</File>
 			<File
@@ -181,6 +193,9 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\engine\seg_manager.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\engine\seg_manager.h">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\engine\sys_strings.cpp">
@@ -298,9 +313,6 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\scicore\games.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\scicore\int_hashmap.cpp">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\scicore\resource.cpp">
