--- a/dists/msvc71/sci.vcproj
+++ b/dists/msvc71/sci.vcproj
@@ -131,6 +131,18 @@
 				RelativePath="..\..\engines\sci\engine\grammar.cpp">
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\engine\heap.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\engine\heap.h">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\engine\int_hashmap.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\engine\int_hashmap.h">
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\engine\kernel.cpp">
 			</File>
 			<File
@@ -195,6 +207,9 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\engine\seg_manager.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\engine\seg_manager.h">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\engine\sys_strings.cpp">
@@ -312,9 +327,6 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\scicore\games.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\scicore\int_hashmap.cpp">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\scicore\resource.cpp">
