--- a/dists/msvc8/sci.vcproj
+++ b/dists/msvc8/sci.vcproj
@@ -185,6 +185,22 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\engine\heap.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\engine\heap.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\engine\int_hashmap.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\engine\int_hashmap.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\engine\kernel.cpp"
 				>
 			</File>
@@ -270,6 +286,10 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\engine\seg_manager.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\engine\seg_manager.h"
 				>
 			</File>
 			<File
@@ -426,10 +446,6 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\scicore\games.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\scicore\int_hashmap.cpp"
 				>
 			</File>
 			<File
