Add base-backend.cpp to Symbian base make file
svn-id: r38379

--- a/backends/platform/symbian/mmp/scummvm_base.mmp.in
+++ b/backends/platform/symbian/mmp/scummvm_base.mmp.in
@@ -105,6 +105,7 @@ SOURCE	   backends\events\default\default-events.cpp
 SOURCE	   backends\timer\default\default-timer.cpp
 SOURCE	   backends\saves\savefile.cpp
 SOURCE	   backends\saves\default\default-saves.cpp
+SOURCE	   backends\base-backend.cpp
 SOURCE	   engines\engine.cpp
 SOURCE	   engines\dialogs.cpp
 SOURCE	   engines\game.cpp
